tests/snapshots/run_wpt_conformance__trtx_clamp_int64_1D_tensor_with_bigint_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "clamp.https.any.js",
    "clamp int64 1D tensor with bigint max",
    "trtx",
    Failed {
        msg: Some(
            "clamp :: clamp int64 1D tensor with bigint max: index 1: actual=9007199254740995 expected=9007199254740992 tolerance=0\n  inputs: clampInput: [-41, String(\"9007199254740995\"), -4, -2, 1, 0, 2, 4]\n  expected clampOutput: [-2, 9007199254740992, -2, -2, 1, 0, 2, 4]\n  actual clampOutput: [-2, 9007199254740995, -2, -2, 1, 0, 2, 4]\n  expected clampOutput full nd:\n(shape [8])\n[-2, 9007199000000000, -2, -2, 1, 0, 2, 4]\n  actual clampOutput full nd:\n[ ...] (len=0, shape=[8])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    clampInput: i64[8];\n  }\n\n  nodes {\n    [clampOutput] = clamp(clampInput, label=\"\", maxValue=\"9007199254740992\", minValue=-2);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
