tests/snapshots/run_wpt_conformance__trtx_clamp_int8_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "clamp.https.any.js",
    "clamp int8 1D tensor",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    clampInput: i8[8];\n  }\n\n  nodes {\n    [clampOutput] = clamp(clampInput, label=\"\", maxValue=125, minValue=-2);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
