tests/snapshots/run_wpt_conformance__trtx_clamp_uint32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "clamp.https.any.js",
    "clamp uint32 1D tensor",
    "trtx",
    Failed {
        msg: Some(
            "clamp :: clamp uint32 1D tensor: index 0: actual=5 expected=-6 tolerance=0\n  inputs: clampInput: [4294967295, 127, 5, 0]\n  expected clampOutput: [-6, 127, 5, 5]\n  actual clampOutput: [5, 5, 5, 5]\n  expected clampOutput full nd:\n(shape [4])\n[-6, 127, 5, 5]\n  actual clampOutput full nd:\n(shape [4])\n[5, 5, 5, 5]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    clampInput: u32[4];\n  }\n\n  nodes {\n    [clampOutput] = clamp(clampInput, label=\"\", maxValue=4294967290, minValue=5);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
