tests/snapshots/run_wpt_conformance__trtx_clamp_uint64_1D_tensor_with_Number_min_and_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp uint64 1D tensor with Number min and max",
    "trtx",
    "PASS",
)
