tests/snapshots/run_wpt_conformance__trtx_clamp_uint64_1D_tensor_with_bigint_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "clamp.https.any.js",
    "clamp uint64 1D tensor with bigint max",
    "trtx",
    Failed {
        msg: Some(
            "clamp :: clamp uint64 1D tensor with bigint max: uint64 output mismatch\n  inputs: clampInput: [String(\"9007199254740995\"), 127, 5, 0]\n  expected clampOutput: [9007199254740992, 127, 5, 5]\n  actual clampOutput: [9007199254740996, 127, 5, 5]\n  expected clampOutput full nd:\n(shape [4])\n[9007199000000000, 127, 5, 5]\n  actual clampOutput full nd:\n[ ...] (len=0, shape=[4])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    clampInput: u64[4];\n  }\n\n  nodes {\n    [clampOutput] = clamp(clampInput, label=\"\", maxValue=\"9007199254740992\", minValue=5);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
